--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-image-magnify": "^2.7.4",
     "react-multi-carousel": "^2.8.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
