--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^10.12.7",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-image-magnify": "^2.7.4",
@@ -23,6 +24,7 @@
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "recharts": "^2.5.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "slick-carousel": "^1.8.1",
